There are news feeds available for this project
http://sourceforge.net/export/rss2_projfiles.php?group_id=236429
http://freshmeat.net/projects/vmpk/releases.atom